<resources>
    <string name="app_name">FoodTest</string>
    <string name="toolbar_title">دارچین</string>
    <string name="navigation_drawer_header_title">دارچین</string>
    <string name="navigation_drawer_header_text">دارچین</string>
    <string name="navigation_drawer_item1">زبان</string>
    <string name="navigation_drawer_item2">حالت شب </string>
    <string name="navigation_drawer_item3">سایز متن</string>
    <string name="category_list_fragment_title">دارچین</string>
    <string name="search_fragment_title">جستجو</string>
    <string name="blankFragment_title">چی بپزم</string>
    <string name="blankFragment2_title">پروفایل</string>
    <string name="empty_list_message">موردی وجود ندارد</string>
    <string name="error_state_error_text">خطایی رخ داده است</string>
    <string name="error_state_error_button_text">تلاش مجدد</string>
    <string name="search_fragment_query_blank">متن مناسب وارد کنید</string>
    <string name="searchbar_hint">جستجو</string>
    <string name="food_detail_material_title">مواد اولیه</string>
    <string name="food_detail_recipe_title">دستور پخت</string>
    <string name="food_detail_name_title">نام غذا</string>
    <string name="food_detail_category_title">دسته بندی غذا</string>
    <string name="bottom_sheet_food_name_hint">نام غذا</string>
    <string name="bottom_sheet_dialog_title">افزودن غذا</string>
    <string name="bottom_sheet_food_recipe_hint">دستور پخت</string>
    <string name="bottom_sheet_food_materials_hint">نام ماده اولیه:مقدار(اینتر)</string>
    <string name="bottom_sheet_blank_form_message">همه فیلد ها را کامل کنید</string>
    <string name="bottom_sheet_invalid_pattern_message">مواد اولیه را طبق الگو وارد کنید</string>
    <string name="insert_food_error_message">خطا در ذخیره سازی اطلاعات</string>
    <string name="insert_food_success_message">اطلاعات ذخیره شد</string>
    <string name="bottom_sheet_save_button_text">ذخیره شود</string>
</resources>