<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    style="?attr/bottomSheetStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:fitsSystemWindows="true"
    app:behavior_hideable="true"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/closeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:src="@drawable/ic_close_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/dialog_Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorSecondaryVariant"
            android:gravity="center"
            android:text="@string/bottom_sheet_dialog_title"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="?attr/colorOnSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/closeButton" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/food_name_container"
            style="@style/Widget.FoodTest.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginTop="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:hint="@string/bottom_sheet_food_name_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_Title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/food_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/food_recipe_container"
            style="@style/Widget.FoodTest.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginTop="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:hint="@string/bottom_sheet_food_recipe_hint"
            android:inputType="textMultiLine"
            android:minLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/food_name_container">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/food_recipe_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:minLines="1" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/food_materials_container"
            style="@style/Widget.FoodTest.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginTop="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:hint="@string/bottom_sheet_food_materials_hint"
            android:inputType="textMultiLine"
            android:minLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/food_recipe_container">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/food_materials_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:minLines="1" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/food_category_container"
            style="@style/Widget.FoodTest.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginTop="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/food_materials_container">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/food_category_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="text"
                android:maxLines="1"
                android:text="" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save_btn"
            style="@style/Widget.FoodTest.SaveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_2x"
            android:text="@string/bottom_sheet_save_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/food_category_container" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
